--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <title>sjahshadhkjdksd</title>
-    <link rel='stylesheet' href='/static/css/style.css'>
+    <link href="./style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
