--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
 <!doctype html>
-<html lang=en-US>
 
 <head>
     <meta charset='utf-8'>
-    <title>sjahshadhkjdksd</title>
+    <title>MY. MUSIC.</title>
     <link href="./style.css" type="text/css" rel="stylesheet">
 </head>
 
-<body>
-    <main id="app">
-        <h1>sjahshadhkjdksd</h1>
-        <p><!DOCTYPE html>
 <html>
-<head>
-<link href='https://fonts.googleapis.com/css?family=Cuprum' rel='stylesheet'>
-<link href="https://fonts.googleapis.com/css?family=B612" rel='stylesheet'></p>
-    
-<p></head>
-<body></p>
+<body>
 <p><marquee> <span style="color:red">hello these are my songs</span>  <em>(made in beepbox/jummbox/ultrabox)</em> </marquee></p>
 <p><span style="font-size:0.5em">times I viewed the pastebin link: like 15 times <strong>(current views minus the times I viewed is how many views there actually are)</strong></p>
 <p>HEADPHONES RECOMMENDED</p>
@@ -203,5 +193,4 @@ DON'T LET IT GET TO YOU # <a href="https://tinyurl.com/3kcu7kfr">https://tinyurl
 <details><summary><span class="date">[ 4/ 8/23]</span> '<span class="bb">AAAAA</span>' # <a href="http://tinyurl.com/5crs8taj">link</a></summary></details></p>
     </main>
 </body>
-
 </html>
