--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <html>
 <body>
+    <main>
 <p><marquee> <span style="color:red">hello these are my songs</span>  <em>(made in beepbox/jummbox/ultrabox)</em> </marquee></p>
 <p><span style="font-size:0.5em">times I viewed the pastebin link: like 15 times <strong>(current views minus the times I viewed is how many views there actually are)</strong></p>
 <p>HEADPHONES RECOMMENDED</p>
